# podcaststudiohub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  TESTING_AUTOMATION_ANALYSIS.md  TESTING_GUIDE.md  TESTING_GUIDE_MANUAL.md  UPSTREAM_SYNC.md  ecosystem.config.js  package.json  playwright.config.ts
.docker/: api.Dockerfile  docker-compose.yml  web.Dockerfile
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: deploy-dev.yml  playwright-tests.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/versions/: 001_initial_schema.py  002_rename_metadata_to_episode_metadata.py
apps/api/src/: config.py  database.py  dependencies.py  main.py  worker.py
apps/api/src/middleware/: auth.py  cors.py  tenant.py
apps/api/src/models/: __init__.py  content_source.py  conversation_template.py  episode.py  project.py  tts_configuration.py  user.py
apps/api/src/routers/: __init__.py  auth.py  content.py  episodes.py  generation.py  projects.py
apps/api/src/schemas/: __init__.py  auth.py  common.py  content.py  episode.py  project.py
apps/api/src/services/: __init__.py  auth_service.py  podcast_service.py  storage_service.py
apps/api/src/tasks/: audio_composition.py  platform_distribution.py  podcast_generation.py  s3_upload.py
apps/api/src/utils/: encryption.py  jwt.py  validators.py
apps/web/: package.json
deployment/: DEPLOYMENT.md  NEXT_STEPS.md  QUICKSTART.md  README.md
deployment/nginx/: podcastfy.conf
deployment/scripts/: deploy.sh  setup-server.sh
deployment/systemd/: podcastfy-api.service  podcastfy-celery.service  (+1 more)
tests/e2e/: README.md
(+32 files in other folders)
