[project]
name = "api"
version = "0.1.0"
description = "Podcastfy GUI API - FastAPI backend for podcast generation platform"
readme = "README.md"
authors = [
    { name = "frankbria", email = "frank.bria@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "podcastfy>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
